--- a/仕様書.md
+++ b/仕様書.md
@@ -69,3 +69,123 @@
 | **`components/Icons.tsx`** | 🛡️ **ユニットアイコン**。ユニットの種類（歩兵、戦車など）を視覚的に表現するSVGアイコンを描画します。 |
 | **`index.html` & `index.tsx`** | 🚀 **起動ファイル**。アプリケーションのエントリーポイント（起動点）です。HTMLの骨格を定義し、ReactアプリケーションをDOMに描画します。 |
 | **`README.md`** | 📖 **説明書**。プロジェクトの概要と、ローカル環境でアプリケーションを実行するための手順が記載されています。 |
+
+
+承知いたしました。提供されたソースコードと仕様書に基づき、機能定義書を作成します。
+
+---
+
+## **機能定義書：Gemini Saga - Hex Strategy**
+
+このドキュメントは、戦略シミュレーションゲーム「Gemini Saga - Hex Strategy」の主要な機能、コンポーネント、およびデータ構造を定義します。
+
+### **1. ゲームの基本構造 (App.tsx)**
+
+アプリケーション全体のロジックと状態管理は、`App.tsx` コンポーネントが担います。
+
+| 状態 (State) | 型 (Type) | 説明 |
+| :--- | :--- | :--- |
+| `gameState` | `GameState` | 現在のゲームの状態（'playing' または 'gameOver'）。 |
+| `turn` | `number` | 現在のターン数。 |
+| `activeTeam` | `Team` | 現在行動可能なチーム（'Blue' または 'Red'）。 |
+| `boardLayout` | `BoardLayout` | マップの地形情報を保持するMapオブジェクト。 |
+| `units` | `Unit[]` | 全てのユニットの情報を保持する配列。 |
+| `selectedUnitId` | `string | null` | 選択されているユニットのID。 |
+| `hoveredHex` | `Coordinate | null` | マウスカーソルが乗っているヘックスの座標。 |
+| `battleReport` | `BattleReport | null` | 戦闘レポートの情報を保持するオブジェクト。 |
+| `history` | `GameStateSnapshot[]` | アンドゥ機能のためにゲーム状態のスナップショットを保持します。 |
+
+| 主要な関数 | 説明 |
+| :--- | :--- |
+| `initializeGame()` | ゲームの初期化処理。ボードレイアウトとユニットを生成・配置します。 |
+| `handleEndTurn()` | ターン終了処理。アクティブチームを切り替え、天候を更新し、ユニットの状態をリセットします。 |
+| `checkWinCondition()` | 勝利条件の判定。どちらかのチームのユニットが全滅したかを判定します。 |
+| `handleAttack()` | 攻撃処理。攻撃計算を行い、戦闘レポートを生成し、ユニットの状態を更新します。 |
+| `handleHexClick()` | ヘックスタイルクリック時の処理。ユニットの選択、移動、攻撃などのアクションを実行します。 |
+| `handleAction()` | 「待機」や「アンドゥ」などのアクションを処理します。 |
+
+---
+
+### **2. 定数と型定義**
+
+#### **2.1. ゲーム内定数 (constants.ts)**
+
+ゲームのバランスを定義する不変のデータです。
+
+* **`MAP_MIN_Q`, `MAP_MAX_Q`, `MAP_MIN_R`, `MAP_MAX_R`**: マップの広さを定義します。
+* **`HEX_SIZE`**: ヘックスの描画サイズを定義します。
+* **`UNIT_STATS`**: `Infantry`, `Tank`, `ArmoredCar`, `Artillery`, `AntiTank` の各ユニットのステータス（最大HP、攻撃力、防御力、移動力など）を定義します。
+* **`TERRAIN_STATS`**: `Plains`, `Forest`, `Mountain` など、各々の地形が戦闘や移動に与える影響（ボーナス、移動コスト）を定義します。
+* **`INITIAL_UNIT_POSITIONS`**: 各チームのユニットの初期配置を定義します。
+* **`TEAM_COLORS`**: 各チームのテーマカラーを定義します。
+
+#### **2.2. 型定義 (types.ts)**
+
+TypeScriptによる静的型付けのための定義です。
+
+* **`Team`**: `'Blue' | 'Red'`
+* **`UnitType`**: `'Infantry' | 'Tank' | 'ArmoredCar' | 'Artillery' | 'AntiTank'`
+* **`TerrainType`**: `'Plains' | 'Forest' | ...`
+* **`Unit`**: ユニットの全情報（ID, HP, 攻撃力, 座標など）を含むインターフェース。
+* **`Tile`**: ヘックスタイルの情報（座標、地形）を含むインターフェース。
+* **`BattleReport`**: 戦闘レポートの情報（攻撃側、防御側、ダメージ、レポート本文）を含むインターフェース。
+* **`GameStateSnapshot`**: アンドゥ機能のためのゲーム状態のスナップショットの型定義です。
+
+---
+
+### **3. コアロジック**
+
+#### **3.1. マップ関連処理 (utils/map.ts)**
+
+| 関数名 | 説明 |
+| :--- | :--- |
+| `generateBoardLayout()` | ランダムなマップを生成します。平原をベースに、都市、川、山岳、森林などを配置します。 |
+| `calculateReachableTiles()` | 選択されたユニットの移動可能範囲を計算します。敵ユニットのZOC（支配領域）を考慮し、移動コストを計算します。 |
+| `getDistance()` | 2つのヘックス間の距離を計算します。 |
+| `getNeighbors()` | 指定されたヘックスに隣接する全てのヘックスの座標を取得します。 |
+| `axialToPixel()`, `coordToString()` | 座標系の変換や管理のためのユーティリティ関数です。 |
+
+#### **3.2. 戦闘レポート生成 (services/battleReport.ts)**
+
+| 関数名 | 説明 |
+| :--- | :--- |
+| `generateBattleReport()` | 攻撃側・防御側ユニット、地形、ダメージ情報を基に、物語風の戦闘レポートテキストを生成します。 |
+
+---
+
+### **4. UIコンポーネント**
+
+#### **4.1. GameBoard.tsx**
+
+ゲーム盤全体の描画を担当するメインコンポーネントです。
+
+* ヘックスタイル、ユニット、移動・攻撃可能範囲の表示。
+* SVGを用いて盤面を描画し、ズームやスクロール操作を可能にします。
+* 天候エフェクト（雨など）の描画も行います。
+
+#### **4.2. InfoPanel.tsx**
+
+画面右側に表示される情報パネルです。
+
+* 選択中のユニット、またはマウスオーバーしたタイル・ユニットの詳細情報を表示します。
+* ユニットのステータス（HP、攻撃力など）や地形効果を確認できます。
+* ユニットの行動（待機、アンドゥ）を選択するボタンを提供します。
+* ゲーム終了時には、勝者を表示し、リスタートボタンを提供します。
+
+#### **4.3. Header.tsx**
+
+画面上部に表示されるヘッダーです。
+
+* 現在のターン数、アクティブなチーム、各チームの残りユニット数を表示します。
+* **「End Turn」** ボタンを提供し、クリックするとターンを終了します。
+
+#### **4.4. BattleReportModal.tsx**
+
+戦闘発生時に表示されるモーダルウィンドウです。
+
+* 攻撃側と防御側のユニット情報、与えられたダメージ、そして `generateBattleReport` によって生成された物語風のレポートを表示します。
+
+#### **4.5. Hexagon.tsx & Icons.tsx**
+
+* **`Hexagon.tsx`**: 個々のヘックスタイルを描画します。地形に応じた色や、移動・攻撃範囲のハイライトを表現します。
+* **`Icons.tsx`**: ユニットの種類を視覚的に表現するSVGアイコンを描画します。
