いったんいい感じなので、pushする

--- a/Commander/docs/仕様書.md
+++ b/Commander/docs/仕様書.md
@@ -13,35 +13,35 @@
 | **Infantry** | 10 | 4 | 2 | 3 | 60 | 1 | 都市の占領が可能。基本的な戦闘ユニット。 |
 | **Tank** | 20 | 7 | 5 | 4 | 40 | 1 | 高いHPと攻撃力を持つ主力戦車。 |
 | **ArmoredCar** | 15 | 5 | 4 | 6 | 60 | 1 | 高い移動力を誇り、偵察や奇襲に適している。 |
-| **AntiTank** | 10 | 8 | 6 | 1 | 40 | 1 | 車両ユニットに対して高い攻撃力を持つ対戦車兵。 |
-| **Artillery** | 12 | 8 | 3 | 1 | 40 | 2-5 | 遠距離攻撃が可能だが、反撃は受けない。移動後の攻撃は不可。 |
+| **AntiTank** | 10 | 8 | 6 | 1 | 40 | 1 | **車両(Vehicle)に対して特に高い攻撃力**を持つ対戦車兵。 |
+| **Artillery** | 12 | 8 | 3 | 1 | 40 | **2-5** | 遠距離攻撃が可能。攻撃されても**反撃を受けない**。 |
 
 ### 3. 地形特性
 | 地形種別 | 防御ボーナス | 攻撃ボーナス | 移動コスト(歩兵/車両) | 特徴 |
 | :--- | :--- | :--- | :--- | :--- |
-| **Plains** | 0 | 0 | 1 / 1 | 基本的な平地。 |
-| **Forest** | +2 | 0 | 1 / 2 | ユニットに防御ボーナスを与える。車両の移動コストが高い。 |
-| **Mountain** | +3 | +2 | 2 / ∞ | 高い防御・攻撃ボーナス。車両は進入不可。 |
-| **River** | -2 | -1 | 2 / ∞ | ユニットの能力が低下する。車両は進入不可。 |
-| **Road** | -1 | 0 | 1 / 1 | 移動しやすいが、防御的には不利。 |
-| **Bridge** | -1 | 0 | 1 / 1 | 川を渡るための地点。 |
-| **City** | +3 | +1 | 1 / 1 | 高い防御ボーナス。占領可能で、所有しているとターン開始時にユニットが回復。 |
-| **Mud** | -1 | 0 | 2 / 3 | 雨天が続くと平地が変化。移動コストが増加する。 |
+| **Plains** | 0 | 0 | 1 / 1 | 基本的な平地。雨が続くと「泥」に変化することがある。 |
+| **Forest** | +2 | 0 | 1 / 2 | ユニットに高い防御ボーナスを与える。車両の移動コストが高い。 |
+| **Mountain** | +3 | +2 | 2 / ∞ | 最高の防御・攻撃ボーナス。車両は進入不可。 |
+| **River** | -2 | -1 | 2 / ∞ | ユニットの能力が低下する危険地帯。車両は進入不可。 |
+| **Road** | -1 | 0 | 1 / 1 | 移動しやすいが、防御的には不利になる。 |
+| **Bridge** | -1 | 0 | 1 / 1 | 川を渡るための重要な地点。 |
+| **City** | +3 | +1 | 1 / 1 | 高い防御ボーナス。占領可能。**所有しているとターン開始時にユニットのHPが2回復し、燃料が全回復する。** |
+| **Mud** | -1 | 0 | 2 / 3 | 雨天が続くと平地から変化。移動コストが増加する。晴れると平地に戻る。 |
 
 ### 4. 基本ルールと流れ
 1.  **ターン制**: ゲームは「Blue」チームと「Red」チームが交互に行動するターン制で進行します。
-2.  **ユニットの行動**: プレイヤーは自分のターンに、各ユニットを1回ずつ行動させることができます。行動には以下の種類があります。
-    *   **移動**: ユニットを移動範囲内のヘックスに動かします。移動には燃料を消費します。
+2.  **ユニットの行動**: プレイヤーは自分のターンに、各ユニットを1回ずつ行動（移動と攻撃）させることができます。
+    *   **移動**: ユニットを移動範囲内のヘックスに動かします。敵ユニットの隣接ヘックスは「ZOC (Zone of Control)」と呼ばれ、進入は可能ですが、そこからさらに移動することはできず、移動コストも増加します。
     *   **攻撃**: 攻撃範囲内の敵ユニットに攻撃します。攻撃後、反撃可能な敵からは反撃を受けます。
-    *   **占領**: 歩兵ユニットが敵または中立の都市にいる場合、「占領」コマンドでその都市の所有権を奪うことができます。都市には耐久力があり、0にすると占領完了です。
+    *   **占領**: **歩兵(Infantry)ユニット**が敵または中立の都市にいる場合、「占領」コマンドでその都市の所有権を奪うことができます。都市には耐久力(HP)があり、0にすると占領完了です。
     *   **待機**: 行動を終了します。
-    *   **Undo**: 移動や攻撃の行動を一手戻すことができます。
-3.  **天候**: 天候は「晴れ」「雨」「大雨」があり、ターン経過で変化します。雨が続くと平地が「泥」に変わり、ユニットの移動に影響を与えます。
-4.  **補給と修理**: 自軍の都市にいるユニットは、ターン開始時にHPと燃料が回復します。
+    *   **Undo**: そのユニットの今回の行動（移動や攻撃）を一手戻すことができます。
+3.  **天候**: 天候は「晴れ」「雨」「大雨」があり、ターン経過でランダムに変化します。「雨」や「大雨」が3ターン続くと、マップ上の「平地」が「泥」に変化します。
+4.  **補給と修理**: 自軍が所有する都市の上にいるユニットは、自軍ターン開始時に**HPが2ポイント回復し、燃料が最大まで補給されます。**
 
 ### 5. UI概要
 *   **ヘッダー (Header)**: 現在のターン数、アクティブなチーム、天候、両軍の残存ユニット数を表示します。ターン終了ボタンもここにあります。
 *   **ゲームボード (GameBoard)**: ヘックスで構成されたメインのゲーム画面。ユニットや地形が表示されます。
 *   **情報パネル (InfoPanel)**: 選択したユニットやカーソルが乗っているヘックスの詳細情報を表示します。ユニットのステータスや地形の効果が確認できます。
 *   **アクションパネル (ActionPanel)**: ユニット選択時に表示され、「待機」「占領」「Undo」などの行動を選択できます。
-*   **戦闘レポート (BattleReportModal)**: ユニット同士が戦闘を行った際に、結果（ダメージ量など）をモーダルウィンドウで表示します。
+*   **戦闘レポート (BattleReportModal)**: ユニット同士が戦闘を行った際に、結果（ダメージ量、反撃ダメージなど）をモーダルウィンドウで表示します。
