--- a/Commander/docs/機能定義書.md
+++ b/Commander/docs/機能定義書.md
@@ -14,14 +14,15 @@
 | `hoveredHex` | `Coordinate \| null` | カーソルが乗っているヘックスの座標。 |
 | `battleReport` | `BattleReport \| null` | 戦闘結果を格納するオブジェクト。 |
 | `winner` | `Team \| null` | 勝者が決定した際にチーム名が格納される。 |
-| `weather` | `WeatherType` | 現在の天候。 |
+| `weather` | `WeatherType` | 現在の天候（'Clear', 'Rain', 'HeavyRain'）。 |
+| `weatherDuration` | `number` | 現在の天候が継続しているターン数。 |
 | `history` | `GameStateSnapshot[]` | 「Undo」機能のための状態スナップショットの配列。 |
 
 ### 2. 主要な関数/メソッド (`useGameLogic.ts`)
 | 関数名 | 説明 |
 | :--- | :--- |
 | `loadGame(mapData)` | JSONデータからマップとユニットを初期化・ロードする。 |
-| `handleEndTurn()` | ターンを終了し、アクティブなチームを切り替える。ユニットの回復、天候の変化、地形の変化などを処理する。 |
+| `handleEndTurn()` | ターンを終了し、アクティブなチームを切り替える。**都市のHP回復**、**ユニットの回復/補給**、**天候と地形の変化**などを処理する。 |
 | `handleHexClick(coord)` | ヘックスがクリックされた際のメインロジック。ユニットの選択、移動、攻撃の起点となる。 |
 | `handleAttack(attacker, defender)` | 攻撃側と防御側のユニット情報に基づき、戦闘計算（ダメージ、反撃）を実行し、状態を更新する。 |
 | `handleAction(action)` | 'wait', 'undo', 'capture' などのアクションを処理する。 |
@@ -29,19 +30,24 @@
 
 ### 3. 定数と型定義
 *   **`types/index.ts`**: `Unit`, `Tile`, `GameState` など、アプリケーション全体で使われる主要なデータ構造の型定義がここに集約されています。
-*   **`config/constants.ts`**: `UNIT_STATS` (ユニットの基本性能)、`TERRAIN_STATS` (地形効果) など、ゲームバランスに関わる不変のデータが定義されています。
+*   **`config/constants.ts`**: `UNIT_STATS` (ユニットの基本性能)、`TERRAIN_STATS` (地形効果)、`CITY_HP` (都市の耐久力)、`CITY_HEAL_RATE` (都市の回復量)など、ゲームバランスに関わる不変のデータが定義されています。
 
 ### 4. コアロジック
 #### 4.1. マップ関連処理 (`utils/map.ts`)
 *   **マップ生成**: `loadMapFromJSON` 関数が `test_map_1.json` のようなデータを受け取り、`boardLayout` と `units` の状態を生成します。
-*   **移動範囲計算**: `calculateReachableTiles` 関数が、ユニットの移動力、燃料、地形の移動コスト、敵ユニットのZOC（Zone of Control）を考慮して、移動可能なタイルのリストを計算します。
+*   **移動範囲計算**: `calculateReachableTiles` 関数が、ユニットの移動力、燃料、地形の移動コストを考慮して移動可能なタイルを計算します。この際、**敵ユニットに隣接するヘックス(ZOC)を検知し、そこへの進入コストを増加させ、そこからの連続移動を制限するロジック**が含まれています。
 *   **経路探索**: `findPath` 関数がA*アルゴリズムを用いて、指定した目的地までの最短経路を計算します。
 
 #### 4.2. 戦闘処理 (`useGameLogic.ts`)
 *   `handleAttack` 関数内で戦闘ロジックが処理されます。
 *   ダメージ計算は、`攻撃ユニットの攻撃力 + 地形攻撃ボーナス - 防御ユニットの防御力 + 地形防御ボーナス` という基本的な式で行われます。
-*   `UNIT_STATS` に定義された `attackVs`, `defenseVs` により、ユニットクラス間の相性補正が適用されます。
+*   `UNIT_STATS` に定義された `attackVs`, `defenseVs` により、ユニットクラス（`Infantry`, `Vehicle`）間の相性補正が適用されます。
 *   砲兵（Artillery）のような遠距離ユニットは反撃を受けない、といった特殊ルールもここで処理されます。
+
+#### 4.3. ゲーム進行ロジック (`useGameLogic.ts`)
+*   **天候システム**: `handleEndTurn`内で、ターン終了時に天候がランダムに変化します。`weatherDuration` が3ターン以上になると、`Plains`地形が`Mud`に変化します。
+*   **都市の回復**: `handleEndTurn`内で、所有者がアクティブプレイヤーではない都市のHPが `CITY_HEAL_RATE` (現在値: 2) だけ回復します。
+*   **ユニットの回復と補給**: `handleEndTurn`内で、自軍都市上にいるユニットのHPが2回復し、燃料(fuel)が最大値まで補給されます。
 
 ### 5. UIコンポーネント (`components/game/`)
 | コンポーネント名 | 説明 |
