--- a/Commander/docs/画面仕様書.md
+++ b/Commander/docs/画面仕様書.md
@@ -57,7 +57,7 @@ graph TD
 ### 5. 戦闘画面 (`BattleScreen`)
 *   **目的**: ゲームプレイの中心となる画面。プレイヤーがユニットを操作し、勝利条件の達成を目指します。
 *   **主な機能**:
-    *   **ゲームボード**: ヘックスで構成されたマップ上に、自軍および敵軍のユニットが表示されます。
+    *   **ゲームボード**: ヘックスで構成されたマップ上に、自軍および敵軍のユニットが表示されます。マップの表示領域はウィンドウサイズいっぱいに広がるように設定されていますが、マップ自体の縦横比（アスペクト比）は維持されるため、ウィンドウの形状によっては上下または左右に余白が生まれることがあります。
     *   **ユニット操作**: ユニットを選択し、移動、攻撃、占領、待機などのコマンドを実行します。
     *   **情報表示**: ユニットのステータス、地形効果、現在のターン数、天候など、ゲーム進行に必要な情報が常に表示されます。
     *   **ターン進行**: 「ターン終了」ボタンで自軍のターンを終え、敵軍のターンに移ります。
